# uv-wheel

./: .gitignore  README.md  deutils.requirements.txt  env.example  example.databricks.yml  example_notebook.py  pyproject.toml  requirements.txt
src/uv_wheel/: example_module.py
